--- a/cdcdata_explore.ipynb
+++ b/cdcdata_explore.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6c317da9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +17,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "eccccb29",
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +447,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3f476780",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +472,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1855cfd8",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +515,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3b1507c8",
    "metadata": {},
    "outputs": [
     {
@@ -540,8 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "4822f606",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +547,7 @@
        "Name: GeographicLevel, dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,8 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "372f69ed",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,8 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "77da92f5",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -622,8 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "48042b69",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +629,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,8 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "123bf1d2",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,8 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "55c6caa4",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,8 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "285599a3",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -709,8 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "051864ed",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +709,7 @@
        "Name: GeographicLevel, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,8 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "aa3a5476",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +730,7 @@
        "Name: GeographicLevel, dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,8 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "3fad6d29",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -794,8 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "51a78b19",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -833,8 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "a8a6245d",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -872,16 +855,335 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7c472e82",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>LocationAbbr</th>\n",
+       "      <th>LocationDesc</th>\n",
+       "      <th>GeographicLevel</th>\n",
+       "      <th>DataSource</th>\n",
+       "      <th>Class</th>\n",
+       "      <th>Topic</th>\n",
+       "      <th>Mortality_Rate</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Race</th>\n",
+       "      <th>TopicID</th>\n",
+       "      <th>LocationID</th>\n",
+       "      <th>Y_Lat</th>\n",
+       "      <th>X_Lon</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>339</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>State</td>\n",
+       "      <td>NVSS</td>\n",
+       "      <td>Cardiovascular Diseases</td>\n",
+       "      <td>Heart Disease Mortality</td>\n",
+       "      <td>127.9</td>\n",
+       "      <td>Overall</td>\n",
+       "      <td>Asian and Pacific Islander</td>\n",
+       "      <td>T2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>64.3173</td>\n",
+       "      <td>-152.571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>523</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>State</td>\n",
+       "      <td>NVSS</td>\n",
+       "      <td>Cardiovascular Diseases</td>\n",
+       "      <td>Heart Disease Mortality</td>\n",
+       "      <td>261.2</td>\n",
+       "      <td>Overall</td>\n",
+       "      <td>Overall</td>\n",
+       "      <td>T2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>64.3173</td>\n",
+       "      <td>-152.571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>524</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>State</td>\n",
+       "      <td>NVSS</td>\n",
+       "      <td>Cardiovascular Diseases</td>\n",
+       "      <td>Heart Disease Mortality</td>\n",
+       "      <td>336.4</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Overall</td>\n",
+       "      <td>T2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>64.3173</td>\n",
+       "      <td>-152.571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>525</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>State</td>\n",
+       "      <td>NVSS</td>\n",
+       "      <td>Cardiovascular Diseases</td>\n",
+       "      <td>Heart Disease Mortality</td>\n",
+       "      <td>190.2</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Overall</td>\n",
+       "      <td>T2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>64.3173</td>\n",
+       "      <td>-152.571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>526</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>Alaska</td>\n",
+       "      <td>State</td>\n",
+       "      <td>NVSS</td>\n",
+       "      <td>Cardiovascular Diseases</td>\n",
+       "      <td>Heart Disease Mortality</td>\n",
+       "      <td>245.6</td>\n",
+       "      <td>Overall</td>\n",
+       "      <td>White</td>\n",
+       "      <td>T2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>64.3173</td>\n",
+       "      <td>-152.571</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59086</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>WY</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>State</td>\n",
+       "      <td>NVSS</td>\n",
+       "      <td>Cardiovascular Diseases</td>\n",
+       "      <td>Heart Disease Mortality</td>\n",
+       "      <td>235.2</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Hispanic</td>\n",
+       "      <td>T2</td>\n",
+       "      <td>56</td>\n",
+       "      <td>42.9984</td>\n",
+       "      <td>-107.552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59087</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>WY</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>State</td>\n",
+       "      <td>NVSS</td>\n",
+       "      <td>Cardiovascular Diseases</td>\n",
+       "      <td>Heart Disease Mortality</td>\n",
+       "      <td>145.6</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>Hispanic</td>\n",
+       "      <td>T2</td>\n",
+       "      <td>56</td>\n",
+       "      <td>42.9984</td>\n",
+       "      <td>-107.552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59091</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>WY</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>State</td>\n",
+       "      <td>NVSS</td>\n",
+       "      <td>Cardiovascular Diseases</td>\n",
+       "      <td>Heart Disease Mortality</td>\n",
+       "      <td>313.1</td>\n",
+       "      <td>Overall</td>\n",
+       "      <td>American Indian and Alaskan Native</td>\n",
+       "      <td>T2</td>\n",
+       "      <td>56</td>\n",
+       "      <td>42.9984</td>\n",
+       "      <td>-107.552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59092</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>WY</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>State</td>\n",
+       "      <td>NVSS</td>\n",
+       "      <td>Cardiovascular Diseases</td>\n",
+       "      <td>Heart Disease Mortality</td>\n",
+       "      <td>328</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>American Indian and Alaskan Native</td>\n",
+       "      <td>T2</td>\n",
+       "      <td>56</td>\n",
+       "      <td>42.9984</td>\n",
+       "      <td>-107.552</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59093</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>WY</td>\n",
+       "      <td>Wyoming</td>\n",
+       "      <td>State</td>\n",
+       "      <td>NVSS</td>\n",
+       "      <td>Cardiovascular Diseases</td>\n",
+       "      <td>Heart Disease Mortality</td>\n",
+       "      <td>291.3</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>American Indian and Alaskan Native</td>\n",
+       "      <td>T2</td>\n",
+       "      <td>56</td>\n",
+       "      <td>42.9984</td>\n",
+       "      <td>-107.552</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>846 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Year LocationAbbr LocationDesc GeographicLevel DataSource  \\\n",
+       "339    2017           AK       Alaska           State       NVSS   \n",
+       "523    2017           AK       Alaska           State       NVSS   \n",
+       "524    2017           AK       Alaska           State       NVSS   \n",
+       "525    2017           AK       Alaska           State       NVSS   \n",
+       "526    2017           AK       Alaska           State       NVSS   \n",
+       "...     ...          ...          ...             ...        ...   \n",
+       "59086  2017           WY      Wyoming           State       NVSS   \n",
+       "59087  2017           WY      Wyoming           State       NVSS   \n",
+       "59091  2017           WY      Wyoming           State       NVSS   \n",
+       "59092  2017           WY      Wyoming           State       NVSS   \n",
+       "59093  2017           WY      Wyoming           State       NVSS   \n",
+       "\n",
+       "                         Class                    Topic Mortality_Rate  \\\n",
+       "339    Cardiovascular Diseases  Heart Disease Mortality          127.9   \n",
+       "523    Cardiovascular Diseases  Heart Disease Mortality          261.2   \n",
+       "524    Cardiovascular Diseases  Heart Disease Mortality          336.4   \n",
+       "525    Cardiovascular Diseases  Heart Disease Mortality          190.2   \n",
+       "526    Cardiovascular Diseases  Heart Disease Mortality          245.6   \n",
+       "...                        ...                      ...            ...   \n",
+       "59086  Cardiovascular Diseases  Heart Disease Mortality          235.2   \n",
+       "59087  Cardiovascular Diseases  Heart Disease Mortality          145.6   \n",
+       "59091  Cardiovascular Diseases  Heart Disease Mortality          313.1   \n",
+       "59092  Cardiovascular Diseases  Heart Disease Mortality            328   \n",
+       "59093  Cardiovascular Diseases  Heart Disease Mortality          291.3   \n",
+       "\n",
+       "        Gender                                Race TopicID  LocationID  \\\n",
+       "339    Overall          Asian and Pacific Islander      T2           2   \n",
+       "523    Overall                             Overall      T2           2   \n",
+       "524       Male                             Overall      T2           2   \n",
+       "525     Female                             Overall      T2           2   \n",
+       "526    Overall                               White      T2           2   \n",
+       "...        ...                                 ...     ...         ...   \n",
+       "59086     Male                            Hispanic      T2          56   \n",
+       "59087   Female                            Hispanic      T2          56   \n",
+       "59091  Overall  American Indian and Alaskan Native      T2          56   \n",
+       "59092     Male  American Indian and Alaskan Native      T2          56   \n",
+       "59093   Female  American Indian and Alaskan Native      T2          56   \n",
+       "\n",
+       "         Y_Lat    X_Lon  \n",
+       "339    64.3173 -152.571  \n",
+       "523    64.3173 -152.571  \n",
+       "524    64.3173 -152.571  \n",
+       "525    64.3173 -152.571  \n",
+       "526    64.3173 -152.571  \n",
+       "...        ...      ...  \n",
+       "59086  42.9984 -107.552  \n",
+       "59087  42.9984 -107.552  \n",
+       "59091  42.9984 -107.552  \n",
+       "59092  42.9984 -107.552  \n",
+       "59093  42.9984 -107.552  \n",
+       "\n",
+       "[846 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cdc_reduced_states.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cdc_reduced_states.to_csv(\"data/cdc_reduced_states.csv\", header = True, index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cdc_reduced_nation.to_csv(\"data/cdc_reduced_nation.csv\", header = True, index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#cdc_reduced_county.to_csv(\"/data/cdc_reduced_county.csv\", header = True, index = False)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:PythonAdv] *",
+   "display_name": "Python [conda env:PythonAdv]",
    "language": "python",
    "name": "conda-env-PythonAdv-py"
   },
